--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
+    <head>
+       <title>My Personal Biography</title>
+    </head>
 <body>
-<h1>in heading</h1>
+<h1>My Personal Biography</h1>
+
+<p>I have the wisdom and high evaluation skills to identify and find a suitable solution to a difficult problem.</p>
+<p>I am able to work in a team and can support team members to achieve a vision and mission which in turn is able to increase the productivity of the organization or the position I hold</p>
+<p>I am also a person with a high level of confidence and identity, as well as the ability to communicate and be able to receive any information and assignments well.</p>
+<p>In addition, I am also smart in managing time and a person who carries out tasks regularly, where every time I do a big task, I will plan with good time planning.</p>
+<p>Finally, I am a dedicated person and have a burning desire to achieve my vision and also the department I will hold in a department.</p>
+
 </body>
 </html>
